# ef-map-overlay

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_OLD.md  V1.0.1_VALIDATION_CHECKLIST.md  context7.json  package-lock.json  tmp_injection_log.txt  tmp_smartassembly_sample.json  tmp_solarsystem_sample.json
.github/: copilot-instructions.md
cmake/: Dependencies.cmake
data/: star_catalog_v1.json
docs/: DEBUG_LOGGING_FEATURE_SPEC.md  LLM_TROUBLESHOOTING_GUIDE.md  OVERLAY_ARCHITECTURE.md  TESTING_WORKFLOW.md  TROUBLESHOOTING_OVERLAY_CONNECTION.md  decision-log.md
docs/initiatives/: GAME_OVERLAY_PLAN.md
docs/notes/: STARFIELD_RENDERER_LEGACY.md  starfield_camera_route_plan.md
packaging/msix/: AppxManifest.xml  BUILD_RELEASE_GUIDE.md  PRE_UPLOAD_CHECKLIST.md  PRIVACY_POLICY_TEXT.md  STORE_ASSETS_GUIDE.md  STORE_LISTING.md  STORE_SUBMISSION_GUIDE.md  build_msix.ps1  generate_store_logos.ps1  sign_for_local_testing.ps1  sign_msix_powershell.ps1  verify_msix_contents.ps1
packaging/msix/msix_extract/: AppxBlockMap.xml  AppxManifest.xml  [Content_Types].xml
packaging/msix/staging/: AppxManifest.xml
releases/: EF-Map-Local-Test.cer  EFMapHelper-v1.0.0-DEBUG-SIGNED.msix  EFMapHelper-v1.0.0-ForLocalTesting.msix  EFMapHelper-v1.0.0-SIGNED-LOCAL-TEST.msix  EFMapHelper-v1.0.0.msix  EFMapHelper-v1.0.1.msix  EFMapHelper-v1.0.2.msix  RELEASE_NOTES_v1.0.0.md  STORE_RESUBMISSION_CHECKLIST.md  V1.0.1_RESUBMISSION_GUIDE.md
releases/temp_extract_debug/: AppxBlockMap.xml  AppxManifest.xml  AppxSignature.p7x
releases/temp_extract_debug/AppxMetadata/: CodeIntegrity.cat
releases/temp_extract_release/: AppxBlockMap.xml  AppxManifest.xml
releases/temp_verify_msix/: AppxBlockMap.xml
releases/temp_verify_v1.0.1/: AppxBlockMap.xml  AppxManifest.xml
src/helper/: CMakeLists.txt  Package.appxmanifest  README.md  build_msix.ps1  create_test_cert.ps1  ef-overlay-test-cert.pfx  generate_ico.ps1  generate_icons.ps1  helper_runtime.cpp  helper_runtime.hpp  helper_server.cpp  helper_server.hpp  helper_websocket.cpp  helper_websocket.hpp  install_cert_to_root.ps1  log_parsers.cpp  log_parsers.hpp  log_watcher.cpp  log_watcher.hpp  main.cpp  protocol_registration.cpp  protocol_registration.hpp  session_tracker.cpp  session_tracker.hpp  sign_msix.ps1  system_resolver.cpp  system_resolver.hpp  system_resolver_data.hpp  tray_application.cpp  tray_application.hpp  tray_main.cpp
src/helper/Assets/: README.md
src/injector/: CMakeLists.txt  injector.cpp
src/overlay/: CMakeLists.txt  README.md  dllmain.cpp  overlay_hook.cpp  overlay_hook.hpp  overlay_renderer.cpp  overlay_renderer.hpp  starfield_renderer.cpp  starfield_renderer.hpp
src/shared/: CMakeLists.txt  event_channel.cpp  event_channel.hpp  event_queue_channel.cpp  event_queue_channel.hpp  overlay_events.cpp  overlay_events.hpp  overlay_schema.cpp  overlay_schema.hpp  shared_memory_channel.cpp  shared_memory_channel.hpp  star_catalog.cpp  star_catalog.hpp
tests/: CMakeLists.txt  log_parsers_tests.cpp  overlay_tests.cpp
tools/: DIAGNOSTIC_TOOL_USAGE.md  DISTRIBUTION_SUMMARY.md  QUICK_HELP_DISCORD.md  README.md  README_TEMPLATE.txt  check_bitlocker.ps1  collect_diagnostics.ps1  create_release_package.ps1  diagnose_copy_issue.ps1  diagnose_injection_failure.ps1  launch_helper_template.ps1  overlay_smoke.ps1  package_release.ps1  test_debug_logging.ps1  test_debug_logging_tray.ps1  test_debug_logging_v2.ps1  test_pscan_endpoints.ps1  validate_defender.ps1
